Ajout modale - Poid, taille, capacité - 03.02.2026

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
-    <input id="input" placeholder="Rechercher un pokemon">
-    <button id="searchBtn">Recherche</button>
-    <div id="pokemon">
-    </div>
-
+    <input id="input" placeholder="Search a Pokemon">
+    <button id="searchBtn">Search</button>
+    
+    <div id="pokemon"></div>
+    
+    <dialog id="modal">
+        <button id="closeModal">✖</button>
+        <div id="modalInfo"></div>
+    </dialog>
 </body>
 </html>
